# bbtrack-yolo

./: .gitattributes  .gitignore  Makefile  README.md  batch_process.py  detection_tracking.py  pyproject.toml  requirements.dev.in  requirements.in  requirements.macos.mps.txt  requirements.txt  yolov8_detect.py  yolov8_detect_and_track.py  yolov8_eval.py  yolov8_resume_train.py  yolov8_track.py  yolov8_train.py
bbtrack_yolo/: BBDetecor.py  BBPrediction.py  BBTracker.py  BBoxDetection.py  BBoxTracker.py  __init__.py  comet_ml_util.py  custom_bb2023_mot.py  util.py
environment/: apple_mps.yaml  linux_cuda.lock.yaml  linux_cuda.yaml
examples/: README.md  detect.py  track.py  track_param_tuning.py
examples/advanced/: batch_tracking.py  detect_and_parallel_track.py  trackers_baseline.py  yolov8_eval.py  yolov8_train.py
examples/advanced/predictions/d=mc_dtc2023_gd-shadow_o=gd-shadow_m=yolov8m_imgsz=5472_bs=1_20231219-054003/: 20240516-083312_20230309_SM_Lek1_P2D4_DJI_0771.seg_1  20240516-090525_20230310_SM_Lek1_P2D3_DJI_0176.seg_1  20240516-090926_20230309_SM_Lek1_P2D4_DJI_0782.seg_1  20240516-092143_20230309_SM_Lek1_P3D6_DJI0_744.seg_1  20240516-093402_20230308_SE_Lek1_P2D4_DJI_0766.seg_2  20240516-095009_20230308_SE_Lek1_P2D4_DJI_0766.seg_1  20240516-095350_20230313_SE_Lek1_P2D3_DJI_0312.seg_1  20240516-100025_20230310_SM_Lek1_P1D1_DJI_0158.seg_1  20240516-103923_20230310_SM_Lek1_P2D3_DJI_0176.seg_2  20240516-104159_20230310_SE_Lek1_P1D1_DJI_0190.seg_1
examples/basics/: basic_detect.py  basic_track_and_plot.py  basic_track_eval.py  basic_yolov8_eval.py  basic_yolov8_train.py
examples/basics/datasets/gd_toy/: data.yaml
examples/basics/datasets/gd_toy/train/: labels.cache
examples/basics/datasets/gd_toy/val/: labels.cache
examples/basics/predictions/d=mc_dtc2023_gd-shadow_o=gd-shadow_m=yolov8m_imgsz=5472_bs=1_20231219-054003/20240516-095009_20230308_SE_Lek1_P2D4_DJI_0766.seg_1/: tracks.csv
examples/basics/trackeval/gt/BB2023/seqmaps/: BB2023-full.txt
examples/detect_and_track/predictions/: detection_190_5s.parquet
examples/predict/: batch_track.py  detect.py  detect_and_parallel_track.py  nano_bb.pt  plot.py  track.py  track_bboxtracker.py
examples/train/: batch_tracking.py  trackers_baseline.py
examples/train_and_eval/: track_param_tuning.py
examples/train_and_eval/predictions/d=mc_dtc2023_gd-shadow_o=gd-shadow_m=yolov8m_imgsz=5472_bs=1_20231219-054003/: 20240516-094400_20230310_SM_Lek1_P2D3_DJI_0175.seg_1  20240516-102550_20230313_SE_Lek1_P2D3_DJI_0312.seg_2
tests/: example_detect.py  example_track.py  test_trackeval.py
tests/data/: detection.csv
tests/data/d=mc_dtc2023_m=yolov8n_imgsz=1280_bs=16_20231118-014426/: args.yaml
tests/data/trackeval/: test_answer.json
tests/data/trackeval/gt/BB2023/seqmaps/: BB2023-test.txt
utility/: __init__.py
(+17 files in other folders)
